--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
 
     <body>
-        <h3>RUN BUDDY</h3>
+        <h1>RUN BUDDY</h1>
 
-        What we do 
+        What we do What You Do Your Trainers Reach Out
 
     </body> 
 
