--- a/index.html
+++ b/index.html
@@ -108,8 +108,36 @@
             </div>
         </section>
 
-        <section id="meet-the-trainers">
-            <h2> Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary border">
+                 Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3> Arron Stephens</h3>
+                    <h4> Speed / Strength</h4>
+                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias quisquam atque nostrum quam, in omnis obcaecati mollitia temporibus doloremque non eum nihil, repellendus aut, pariatur repellat quia. Error, facilis hic.</p>
+                </div>
+         </article> 
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3> Joanna Gill</h3>
+                <h4> Endurance </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit fugiat omnis, velit nemo ut cupiditate hic debitis ipsum placeat quod repellendus numquam dolore tenetur beatae facere autem voluptatum! Dolorem! 
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+        </article>
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+            <div class="trainer-bio text left">
+                <h3> Harry "the Headband" Smith</h3>
+                <h4> Strength</h4> 
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta beatae quidem libero blanditiis voluptatem minus, velit soluta magni veniam magnam repellendus a, minima ratione, earum adipisci perspiciatis enim nisi nihil?</p>
+            </div>
+        </article>
         </section> 
 
         <section id="reach-out">
