--- a/index.html
+++ b/index.html
@@ -141,7 +141,32 @@
         </section> 
 
         <section id="reach-out">
-            <h2> Reach Out</h2>
+            <h2> Reach Out</h2> 
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3252.985098297262!2d-80.74582448492512!3d35.380825580265395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88541cca09d791f9%3A0x1ee8a970e03e0d79!2s9916%20Dominion%20Crest%20Dr%2C%20Charlotte%2C%20NC%2028269!5e0!3m2!1sen!2sus!4v1651409838042!5m2!1sen!2sus"
+                 width="400" 
+                 height="400" 
+                 style="border:0;" 
+                 allowfullscreen="" 
+                 loading="lazy" 
+                 referrerpolicy="no-referrer-when-downgrade">
+                </iframe>"
+            </div>
+            <div>
+                <h3> Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br/>
+                    Let us know and we'll be happy to talk to you!
+                </p>  
+                <address>
+                    55 Main Street <br/>
+                    Some Towm, CA <br/>
+                    12345 <br/>
+                    P: 555.RUN.BUDZ (555.786.2839) <br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <footer>
