add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
        
      <section class="hero">
 
+            <div class="hero-cta">
+                <h2> Start Building Habits</h2>
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et soluta cumque harum dignissimos tempore blanditiis sit, placeat numquam. Quam eum id accusamus ab nesciunt obcaecati aperiam vitae similique ipsa voluptatem?</p>
+            </div>
+
             <div class="hero-form">
                 <h3> Get Started Today</h3>
                 <p> FIll out this form and one of our trainers will schedule a consult</p>
