--- a/index.html
+++ b/index.html
@@ -83,14 +83,21 @@
         </section> 
 
         <section id="what-we-do" class="intro">
-            <h2 class= "section-title primary border">What we do</h2> 
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably have
-            </p>
+            <div class="flex-row"></div>
+                <h2 class= "section-title primary border">What We Do</h2> 
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably have
+                </p>
+            </div>
+
         </section>
 
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary border">What You Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary border">What You Do</h2>
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt=""/>
                 <h3> Step 1:<span> Fill Out the Form Above.</span></h3>
@@ -114,9 +121,11 @@
         </section>
 
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary border">
                  Meet The Trainers
             </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.j pg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
